<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_tools">
        <menu>
            <group
                android:id="@+id/group_tools"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_fixer"
                    android:icon="@drawable/ic_menu_screen"
                    android:title="@string/nav_pixel_fixer" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_info">
        <menu>
            <group
                android:id="@+id/group_info"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/nav_help" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/nav_about" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/nav_settings" />
            </group>
        </menu>
    </item>
</menu>
